--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabuada JS</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tabuada</title>
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Digite o número e confirme para gerar uma tabuada</h2>
     <form id="multiplication-form">
-        <div class="form-control">
-            <label for="number">Tabuada do:</label>
-            <input type="number" name="number" id="number" placeholder="3" />
-        </div>
-        <div class="form-control">
-            <label for="multiplicator">Multiplicar até:</label>
-            <input type="number" name="multiplicator" id="multiplicator" value="10" />
-            <input type="submit" value="Calcular" />
-        </div>
+      <div class="form-control">
+        <label>Tabuada do:</label>
+        <input type="number" id="number" placeholder="3" />
+      </div>
+      <div class="form-control">
+        <label>Multiplicar até:</label>
+        <input
+          type="number"
+          id="multiplicator"
+          placeholder="Digite o número de multiplicações"
+          value="10"
+        />
+      </div>
+      <input type="submit" value="Calcular" />
     </form>
     <div id="multiplication-table">
         <h2 id="multiplication-title">Tabuada do número: <span></span></h2>
