--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tabuada JS</title>
+    <title>Tabuada JS - Online</title>
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/script.js" defer></script>
   </head>
@@ -32,6 +32,5 @@
             <p>Informe um número para calcular uma tabuada...</p>
         </div>
     </div>
-
 </body>
 </html>
